# mpris-wallpaper-changer

./: Cargo.toml  README.md
src/: image_modifier.rs  main.rs
