[package]
name = "mpris-wallpaper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.0"
image = "0.25"
fastblur = { git = "https://github.com/fschutt/fastblur" }
fast_image_resize = "3"
reqwest = { version = "0.12", features = [ "blocking", "native-tls" ], default-features = false }
dconf_rs = "0.3.0"
giftwrap = "0.5.0"
dbus = "0.9.7"
